src/test/examples/custom/invalid/semanticErr/class/classInstantiateWithWrongArguments.wacc
# Class instantiate must have correct arguments

begin
  class H is 
    private int v
    H(int v) 
    end
    private int J(int v) is 
      return 0
    end
  end
  H p = new H(true)
end